# HackTemplateNonNested

./: .gitignore  README.md  docker-compose.yml  processor_config.json  stream_wss.py
HackTemplate/: Dockerfile  README.md  stream_rtc.py  stream_sonic.py  stream_wss.py
HackTemplate/audio_processors/: sonic_processor.py
HackTemplate/processors/: base_processor.py  region_processor.py  scene_captioning_processor.py  thermostat_panel_processor.py
HackTemplate/resources/: start_server.sh
HackTemplate/resources/aws/: pyproject.toml
HackTemplate/resources/whatsai/: pyproject.toml
audio_processors/: gemini_processor.py
client/: screen_rtc.html  screen_wss.html
processors/: base_processor.py  basic_processor.py  camio_processor.py  card_processor.py  combined_processor.py  depth_processor.py  elevator_panel_processor.py  extract.py  fast_processor.py  finger_count_processor.py  keyboard_panel_processor.py  printer_panel_processor.py  scene_object_processor.py  seeing_ai_short_text_processor.py  switch_panel_processor.py
resources/: install_environments.sh
resources/whatsai/: pyproject.toml
